# narrative-data-process-for-RAG-pipeline

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.aws  Dockerfile.gpt_service  README.md  deploy.sh  docker-compose.yaml  docker-compose.yml  populate_elasticsearch.py  pyproject.toml  questions-answers-placeholder.json  requirements.txt  summaries-placeholder.json
app/: Dockerfile.metrics  GPTClient.py  __init__.py  chunk_manager.py  elasticsearch_and_faiss_query_line.py  gpt_config.py  gpt_general_questions.py  gpt_service.py  gpt_user_interface_general_questions.py  metrics_base.py  metrics_client.py  metrics_consumer.py  metrics_dashboard.py  metrics_service.py  requirements_gpt_service.txt  requirements_metrics.txt  sanitize_output.py  summaries_index-placeholder.faiss  test_chunk_manager.py  test_elasticsearch_and_faiss_query_line.py
docs/: ARCHITECTURE.md  QUICKSTART.md
k8s/: deployment.yaml  service.yaml  test_service.py
