[project]
name = "gpt-service"
version = "0.1.0"
description = "GPT Service with RAG capabilities"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch==8.11.1",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "flask-swagger-ui>=5.21.0",
    "keybert==0.7.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "numpy==2.2.3",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==3.4.1",
    "tiktoken>=0.9.0",
    "tokenizers==0.21.0",
    "torch==2.6.0",
    "transformers==4.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
